# iori-spec_v2

./: .gitignore  README.md  pyproject.toml
.iori-spec/: config.yaml
.iori-spec/lint/: lint_rule_catalog.yaml
.iori-spec/profiles/: balanced.yaml  exploratory.yaml  strict.yaml
.iori-spec/schemas/: front_matter.schema.json
.iori-spec/sections/: spec_sections_guide.yaml  spec_sections_registry.yaml
artifacts/: spec_index.json  traceability_map.md
iori-spec/: README_SPEC.md
iori-spec/architecture/: ARCH-900_tooling_core.md
iori-spec/data_contracts/: DATA-900_spec_index.md  DATA-901_spec_section_schema.md  DATA-904_search_result.md  DATA-905_context_bundle.md  DATA-906_impact_report.md  DATA-907_prompt_bundle.md  DATA-910_iori_spec_config.md
iori-spec/dev_tasks/: README.md
iori-spec/impl_notes/: TODO.md  dev-plan.md  dev_tasks_spec.md  glossary_jp_en.md  iori_spec_design_notes.md  naming_conventions.md  spec_command.md  spec_design_philosophy.md  spec_faq.md  spec_front_matter.md  spec_structure_and_traceability.md  spec_template.md  template_design_notes.md  工程.md
iori-spec/interfaces/: IF-900_tooling_cli.md  IF-910_spec_index_builder.md  IF-920_lint_core.md  IF-930_trace_lint.md  IF-940_search_specs.md  IF-950_impact_analyzer.md  IF-960_context_builder.md  IF-970_prompt_bundle_builder.md  IF-980_show.md  IF-985_scaffold.md  IF-990_graph_export.md  IF-991_graph_neighbors.md  IF-995_tasks.md
iori-spec/reference/: SPEC-SYS-001_spec_system_guide.md  SPEC-SYS-002_section_schema.md  SPEC-SYS-003_traceability_rule.md  SPEC-SYS-005_tooling_specification.md  (+13 more)
(+32 files in other folders)
